@@ -2,6 +2,7 @@ import morepath
 from morepath import setup
 from morepath.converter import Converter
 from morepath.error import DirectiveReportError, ConfigError, LinkError
+from morepath.compat import text_type
 
 from webtest import TestApp as Client
 import pytest
@@ -1552,3 +1553,82 @@ def test_error_when_path_variables_isnt_dict():
 
     with pytest.raises(LinkError):
         c.get('/models/1')
+
+
+def test_path_method_on_request_same_app():
+    config = setup()
+
+    class App(morepath.App):
+        testing_config = config
+
+    class Model(object):
+        def __init__(self):
+            pass
+
+    @App.path(model=Model, path='simple')
+    def get_model():
+        return Model()
+
+    @App.view(model=Model)
+    def default(self, request):
+        return text_type(isinstance(request.path('simple'), Model))
+
+    @App.view(model=Model, name='extra')
+    def extra(self, request):
+        return text_type(request.path('nonexistent') is None)
+
+    @App.view(model=Model, name='appnone')
+    def appnone(self, request):
+        return request.path('simple', app=None)
+
+    config.commit()
+
+    c = Client(App())
+
+    response = c.get('/simple')
+    assert response.body == b'True'
+    response = c.get('/simple/extra')
+    assert response.body == b'True'
+    with pytest.raises(LinkError):
+        c.get('/simple/appnone')
+
+
+def test_path_method_on_request_different_app():
+    config = setup()
+
+    class App(morepath.App):
+        testing_config = config
+
+    class Model(object):
+        def __init__(self):
+            pass
+
+    @App.path(model=Model, path='simple')
+    def get_model():
+        return Model()
+
+    @App.view(model=Model)
+    def default(self, request):
+        obj = request.path('p', app=request.app.child('sub'))
+        return text_type(isinstance(obj, SubModel))
+
+    class Sub(morepath.App):
+        testing_config = config
+
+    class SubModel(object):
+        pass
+
+    @Sub.path(model=SubModel, path='p')
+    def get_sub_model():
+        return SubModel()
+
+    @App.mount(path='sub', app=Sub)
+    def mount_sub():
+        return Sub()
+
+    config.commit()
+
+    c = Client(App())
+
+    response = c.get('/simple')
+    assert response.body == b'True'
